Test Xamarin Forms - XAML & Code

--- a/XamarinFormsTest/XamarinFormsTest/MainPage.xaml
+++ b/XamarinFormsTest/XamarinFormsTest/MainPage.xaml
@@ -1,11 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:XamarinFormsTest"
-             x:Class="XamarinFormsTest.MainPage">
+			 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+			 xmlns:local="clr-namespace:XamarinFormsTest"
+			 x:Class="XamarinFormsTest.MainPage">
+	<ContentPage.Padding>
+		<OnPlatform x:TypeArguments="Thickness">
+			<On Platform="iOS" Value="20,40,20,20" />
+			<On Platform="Android, WinPhone, Windows" Value="20" />
+		</OnPlatform>
+	</ContentPage.Padding>
 
-	<Label Text="Welcome to Xamarin Forms!" 
-           VerticalOptions="Center" 
-           HorizontalOptions="Center" />
+	<StackLayout Orientation="Vertical"
+	             VerticalOptions="CenterAndExpand"
+	             HorizontalOptions="CenterAndExpand">
+		<Label FontSize="24" FontAttributes="Bold" Text="Hola, Presiona el botón!" />
+		<Button Text="El Botón" Clicked="ElBotonClicked" />
+	</StackLayout>
 
 </ContentPage>
